--- a/css/ie8.css
+++ b/css/ie8.css
@@ -1,52 +1,26 @@
 /*
-	Prologue by HTML5 UP
+	Aerial by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Section/Article */
-
-	section > .last-child, section.last-child, article > .last-child, article.last-child {
-		margin-bottom: 0;
-	}
-
-/* Form */
-
-	form input[type="text"],
-	form input[type="email"],
-	form input[type="password"],
-	form select,
-	form textarea {
-		-ms-behavior: url("assets/js/ie/PIE.htc");
-	}
-
-/* Button */
-
-	input[type="button"],
-	input[type="submit"],
-	input[type="reset"],
-	button,
-	.button {
-		-ms-behavior: url("assets/js/ie/PIE.htc");
-	}
-
 /* Header */
 
-	#nav ul li a {
-		color: #888;
+	#header nav a {
+		position: relative;
+		border: solid 1px #fff;
+		border-radius: 100%;
+		-ms-behavior: url("assets/js/ie/PIE.htc");
 	}
 
-		#nav ul li a.active {
-			background: #1C2022;
+		#header nav a:before {
+			border: 0;
 		}
 
-	#headerToggle .toggle {
-		background-color: #888;
-	}
+/* Footer */
 
-/* Main */
-
-	#main > section.cover {
-		background-position: auto;
-		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
+	#footer {
+		background-image: url("images/ie/footer.png");
+		background-position: bottom left;
+		background-repeat: repeat-x;
 	}
