--- a/sass/ie8.scss
+++ b/sass/ie8.scss
@@ -4,71 +4,32 @@
 @import 'libs/skel';
 
 /*
-	Prologue by HTML5 UP
+	Aerial by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Section/Article */
-
-	section, article {
-		> .last-child,
-		&.last-child {
-			margin-bottom: 0;
-		}
-	}
-
-/* Form */
-
-	form {
-		input[type="text"],
-		input[type="email"],
-		input[type="password"],
-		select,
-		textarea {
-			-ms-behavior: url('assets/js/ie/PIE.htc');
-		}
-	}
-
-/* Button */
-
-	input[type="button"],
-	input[type="submit"],
-	input[type="reset"],
-	button,
-	.button {
-		-ms-behavior: url('assets/js/ie/PIE.htc');
-	}
-
 /* Header */
 
-	#nav {
-		ul {
-			li {
-				a {
-					color: #888;
+	#header {
+		nav {
+			a {
+				position: relative;
+				border: solid 1px _palette(fg);
+				border-radius: 100%;
+				-ms-behavior: url('assets/js/ie/PIE.htc');
 
-					&.active {
-						background: #1C2022;
-					}
+				&:before {
+					border: 0;
 				}
 			}
 		}
 	}
 
-	#headerToggle {
-		.toggle {
-			background-color: #888;
-		}
-	}
+/* Footer */
 
-/* Main */
-
-	#main {
-		> section {
-			&.cover {
-				background-position: auto;
-				-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
-			}
-		}
+	#footer {
+		background-image: url('images/ie/footer.png');
+		background-position: bottom left;
+		background-repeat: repeat-x;
 	}
