--- a/sass/ie9.scss
+++ b/sass/ie9.scss
@@ -4,17 +4,37 @@
 @import 'libs/skel';
 
 /*
-	Prologue by HTML5 UP
+	Aerial by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Button */
+/* Wrapper */
 
-	input[type="button"],
-	input[type="submit"],
-	input[type="reset"],
-	button,
-	.button {
-		background-image: url('images/ie/grad0-15.svg');
+	#wrapper {
+		opacity: 1;
+	}
+
+/* Overlay */
+
+	#overlay {
+		opacity: 1;
+	}
+
+/* Header */
+
+	#header {
+		opacity: 1;
+
+		nav {
+			li {
+				opacity: 1;
+			}
+		}
+	}
+
+/* Footer */
+
+	#footer {
+		background-image: url('images/ie/footer.svg');
 	}
